[gd_scene load_steps=3 format=3 uid="uid://c4c1xotqhwgg8"]

[ext_resource type="Script" path="res://main.gd" id="1_cabvi"]
[ext_resource type="Theme" uid="uid://0p4knfyhmmna" path="res://buttonsTheme.tres" id="3_mf6my"]

[node name="Main" type="Node2D"]
script = ExtResource("1_cabvi")

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.1, 0.1)

[node name="pos1" type="Node2D" parent="."]
position = Vector2(-3150, -500)

[node name="pos2" type="Node2D" parent="."]
position = Vector2(3150, -500)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -5306.0
offset_top = 2256.0
offset_right = 5380.0
offset_bottom = 2973.0

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -666.0
offset_right = 3909.0
grow_vertical = 0

[node name="Left" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Left"

[node name="Left2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Left x2"

[node name="Left4" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Left x4"

[node name="VBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4336.0
offset_top = -666.0
grow_horizontal = 0
grow_vertical = 0

[node name="Right4" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Right 4x
"

[node name="Right2" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Right 2x
"

[node name="Right" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mf6my")
text = "Right
"

[connection signal="pressed" from="Control/VBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Left2" to="." method="_on_left_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Left4" to="." method="_on_left_4_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Left4" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Right4" to="." method="_on_right_4_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Right4" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Right2" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Right2" to="." method="_on_right_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Right" to="." method="_on_right_pressed"]
